# olist-quasi-experiments

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt  setup.py
data/processed/: .gitkeep
data/raw/: .gitkeep
notebooks/: 01_eda.ipynb  02_truckers_strike_did.ipynb  03_deadline_rd.ipynb
reports/: all_results.json  decision_memo.md  did_event_study.csv  did_results.json  interview_prep_did.md  rd_results.json  rd_sensitivity_results.csv  shipping_rd_results.json  shipping_rd_sensitivity.csv
reports/figures/: .gitkeep  did_event_study.html  did_event_study.json  did_parallel_trends.html  did_parallel_trends.json  did_summary.html  did_summary.json  eda_daily_orders.html  eda_daily_orders.json  eda_delivery_delay_distribution.html  eda_delivery_delay_distribution.json  eda_freight_ratio_by_price.html  eda_freight_ratio_by_price.json  eda_installments_distribution.html  eda_installments_distribution.json  eda_missing_data.html  eda_missing_data.json  eda_monthly_metrics.html  eda_monthly_metrics.json  eda_order_status.html  eda_order_status.json  eda_order_value_distribution.html  eda_order_value_distribution.json  eda_orders_by_state.html  eda_orders_by_state.json  eda_rd_preview_deadline.html  eda_rd_preview_deadline.json  eda_review_by_late_status.html  eda_review_by_late_status.json  eda_threshold_bunching.html  eda_threshold_bunching.json  eda_top_categories.html  eda_top_categories.json  eda_truckers_strike_impact.html  eda_truckers_strike_impact.json  eda_value_by_installments.html  eda_value_by_installments.json  rd_main_plot.html  rd_main_plot.json  rd_mccrary_density.html  (+7 more)
scripts/: run_all.py  run_deadline_rd.py  run_eda.py  run_installments_iv.py  run_shipping_threshold_rd.py  run_truckers_strike_did.py
src/: __init__.py
src/analysis/: __init__.py  did.py  iv.py  rd.py
src/data/: __init__.py  download.py  loader.py  preprocessing.py
src/visualization/: __init__.py  charts.py  plotly_utils.py
tests/: __init__.py  test_data.py
