[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olist-quasi-experiments"
version = "0.1.0"
description = "Causal inference analysis of the Olist Brazilian E-Commerce dataset"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "causal-inference",
    "econometrics",
    "regression-discontinuity",
    "difference-in-differences",
    "instrumental-variables",
    "e-commerce",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",
    "statsmodels>=0.14.0",
    "linearmodels>=5.3",
    "rdrobust>=1.1.0",
    "scikit-learn>=1.3.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "kaggle>=1.5.16",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "pyarrow>=14.0.0",
    "streamlit>=1.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/olist-quasi-experiments"
Documentation = "https://github.com/yourusername/olist-quasi-experiments#readme"
Repository = "https://github.com/yourusername/olist-quasi-experiments"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | data
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [".venv", "data"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
exclude = [".venv", "data", "notebooks"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["data", "notebooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
